# OPU_Sim

./: .gitmodules  CMakeLists.txt  manifest.xml  models
launch/: obstacle.spawn.launch  robot.launch  robot.real.launch  robot.spawn.launch  robot1swarm.KuramotoRadius.launch.sh  robot1swarm.KuramotoRadius.real.launch.sh  robot1swarm.launch  robot1swarm.launch.sh  robot1swarm1obs.launch  robot2swarm.KuramotoRadius.launch.sh  robot2swarm.launch  robot2swarm.launch.sh  robot2swarm.launch.sh.backup  robot3swarm.launch.sh  robot4swarm.launch.sh  robotDynamicObstacle.launch  robot_swarm.control.launch.sh  robot_swarm.launch.sh  swarm.launch.sh  world.spawn.launch
models/RP_robot_model_0/: model.config  model.sdf
models/fisheye-camera/: model.config  model.sdf
models/obstacle/: model.config  model.sdf
models/obstacle_cylinder_model/: model.config  model.sdf
models/robot_model/: model.config  model.sdf
models/robot_model_teleop/: model.config  model.sdf
models/robot_model_teleop_0/: model.backup.sdf  model.config  model.sdf
models/robot_model_teleop_0_backup/: model.config  model.sdf
models/robot_model_teleop_1/: model.config  model.sdf  model.sdf.backup
models/robot_model_teleop_2/: model.config  model.sdf  model.sdl
models/robot_model_teleop_3/: model.config  model.sdf  model.sdl
models/robot_model_teleop_4/: model.config  model.sdf
models/target_model/: model.config  model.sdf
src/: mainOPUSim_ControlLaw.cpp  mainOPUSim_ControlLawDynamicObstacle.cpp  mainOPUSim_HalfView.cpp  mainOPUSim_Obstacles.cpp  mainOPUSim_OmniView.cpp  mainOPUSim_RelativeSwarmOdometry.cpp
src/OPUSim_ControlLaw/: OPUSim_ControlLaw.h
src/OPUSim_ControlLawDynamicObstacle/: OPUSim_ControlLawDynamicObstacle.cpp  OPUSim_ControlLawDynamicObstacle.h
src/OPUSim_ControlLaw_Real/: OPUSim_ControlLaw_Real.py
src/OPUSim_HalfView/: OPUSim_HalfView.h
src/OPUSim_IMUOdometry/: mainOPUSim_IMUOdometry.cpp
src/OPUSim_MotorDriver/: teleop.py  (+3 more)
(+12 files in other folders)
